--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
 <h3><p style="text-align:center;">WELCOME TO</p></h3>
 <h2><p style="text-align:center;">Repo: https://turlodales.github.io/</p></h2>
-<h2>thêm nguồn tự động</h2>
+<h2>add automatic source</h2>
 <ul>
 	<li>
-		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://lovejb.github.io/">
+		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://turlodales.github.io/">
 			<img class="icon" src="cydia7.png"/>
-			Thêm vào Cydia</label>
+			Add to Cydia</label>
 		</a>
 	</li>
 </ul>
-<h2><strong>Thêm nguồn thủ công</strong></h2>
+<h2><strong>Add a manual source</strong></h2>
 <ul>
 	<li>
 		<p style="text-align:left;">👉Step 1: Go to "Cydia"  </p>
