--- a/description.html
+++ b/description.html
@@ -16,7 +16,7 @@
 <h2><strong>Contact</strong></h2>
 <ul>
 	<li>
-		<a href="https://www.facebook.com/fahlnbg" target="_blank">
+		<a href="https://www.facebook.com/" target="_blank">
 			<img class="icon" src="fb.png"/>
 			<label>Facebook</label>
 		</a>
