--- a/description.html
+++ b/description.html
@@ -8,8 +8,8 @@
 <script src="jquery-3.2.1.min.js"></script>
 <script src="description.js?_=4654654"></script>
 <body onload="loadPackageInfo()">
-<span id="showAddRepo_" hidden><h2><strong>👉Turlodales Repo</strong></h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://turlodales.github.io/"><img class="icon" src="cydia7.png"/><label>Thêm Soucre vào Cydia</label></a></li></ul></span>
-<p style="text-align:center;" id="showAddRepoUrl_" hidden><em><strong> Source: https://turlodales.github.io</strong> </em><br><strong>👉Source Of Nguyễn Văn Hà👈 </strong></p>
+<span id="showAddRepo_" hidden><h2><strong>👉Turlodales Repo</strong></h2><ul><li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://turlodales.github.io/"><img class="icon" src="cydia7.png"/><label>Add Soucre to Cydia</label></a></li></ul></span>
+<p style="text-align:center;" id="showAddRepoUrl_" hidden><em><strong> Source: https://turlodales.github.io</strong> </em><br><strong>👉Source Of tweaks👈 </strong></p>
 <span id="tweakStatusInfo"><h2></h2><ul style="background:#c6e8ff"><center><li><p id="errorInfo">Please wait...</p></li></center></ul></span>
 <span id="desc_long_" hidden><h2><strong>Describe</strong></h2><ul><li><p id="desc_long"></p></li></ul></span>
 <span id="screenshot_" hidden><h2><strong>Image</strong></h2><ul><li><p id="screenshot"></p></li></ul></span>
@@ -22,7 +22,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="mailto:@gmail.com?subject=CydiaRepo"" target="_blank">
+		<a href="mailto:turlodales@gmail.com?subject=CydiaRepo"" target="_blank">
 			<img class="icon" src="email.png"/>
 			<label>Email</label>
 		</a>
